fetch heap & nonHeap memory metrics together