@@ -12,7 +12,7 @@ package org.springframework.ide.vscode.boot.java.rewrite;
 
 import java.io.ByteArrayInputStream;
 import java.net.URI;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -37,7 +37,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.ide.vscode.boot.app.BootJavaConfig;
 import org.springframework.ide.vscode.boot.java.reconcilers.JavaReconciler;
-import org.springframework.ide.vscode.boot.java.rewrite.RewriteRefactorings.Data;
 import org.springframework.ide.vscode.commons.java.IJavaProject;
 import org.springframework.ide.vscode.commons.java.SpringProjectUtil;
 import org.springframework.ide.vscode.commons.languageserver.quickfix.Quickfix.QuickfixData;
@@ -47,9 +46,9 @@ import org.springframework.ide.vscode.commons.languageserver.reconcile.IProblemC
 import org.springframework.ide.vscode.commons.languageserver.reconcile.ProblemType;
 import org.springframework.ide.vscode.commons.languageserver.reconcile.ReconcileProblem;
 import org.springframework.ide.vscode.commons.languageserver.reconcile.ReconcileProblemImpl;
-import org.springframework.ide.vscode.commons.rewrite.config.RecipeScope;
-import org.springframework.ide.vscode.commons.rewrite.config.RecipeSpringJavaProblemDescriptor;
+import org.springframework.ide.vscode.commons.rewrite.config.RecipeCodeActionDescriptor;
 import org.springframework.ide.vscode.commons.rewrite.java.FixAssistMarker;
+import org.springframework.ide.vscode.commons.rewrite.java.FixDescriptor;
 import org.springframework.ide.vscode.commons.rewrite.java.ORAstUtils;
 import org.springframework.ide.vscode.commons.util.text.IDocument;
 import org.springframework.ide.vscode.commons.util.text.TextDocument;
@@ -82,7 +81,7 @@ public class RewriteReconciler implements JavaReconciler {
 		try {
 			problemCollector.beginCollecting();
 			
-			List<RecipeSpringJavaProblemDescriptor> descriptors = getProblemRecipeDescriptors(project);
+			List<RecipeCodeActionDescriptor> descriptors = getProblemRecipeDescriptors(project);
 			
 			if (!descriptors.isEmpty()) {
 				CompilationUnit cu = cuCache.getCU(project, URI.create(doc.getUri()));
@@ -91,37 +90,43 @@ public class RewriteReconciler implements JavaReconciler {
 				}
 			}			
 		} catch (Exception e) {
-			log.error("", e);
+			if (ORAstUtils.isExceptionFromInterrupedThread(e)) {
+				log.debug("", e);
+			} else {
+				log.error("", e);
+			}
 		} finally {
 			problemCollector.endCollecting();
 		}		
 	}
-
+	
 	private List<ReconcileProblem> createProblems(IDocument doc, FixAssistMarker m, J astNode) {
 		if (astNode != null) {
 			Range range = astNode.getMarkers().findFirst(Range.class).orElse(null);
 			if (range != null) {
-				RecipeSpringJavaProblemDescriptor recipeFixDescriptor = recipeRepo.getProblemRecipeDescriptor(m.getRecipeId());
-				if (recipeFixDescriptor != null && recipeFixDescriptor.getScopes() != null && recipeRepo.getRecipe(recipeFixDescriptor.getRecipeId()).isPresent()) {
-					return List.of(createProblemFromScope(doc, recipeFixDescriptor, m, range));
+				RecipeCodeActionDescriptor recipeFixDescriptor = recipeRepo.getCodeActionRecipeDescriptor(m.getDescriptorId());
+				if (recipeFixDescriptor != null) {
+					return List.of(createProblem(doc, recipeFixDescriptor, m, range));
 				}
 			}
 		}
 		return Collections.emptyList();
 	}
 	
-	private ReconcileProblemImpl createProblemFromScope(IDocument doc, RecipeSpringJavaProblemDescriptor recipeFixDescriptor,
+	private ReconcileProblemImpl createProblem(IDocument doc, RecipeCodeActionDescriptor recipeFixDescriptor,
 			FixAssistMarker m, Range range) {
 		ProblemType problemType = recipeFixDescriptor.getProblemType();
-		ReconcileProblemImpl problem = new ReconcileProblemImpl(problemType, problemType.getLabel(), range.getStart().getOffset(), range.getEnd().getOffset() - range.getStart().getOffset());
+		ReconcileProblemImpl problem = new ReconcileProblemImpl(problemType, m.getLabel() == null ? problemType.getLabel() : m.getLabel(), range.getStart().getOffset(), range.getEnd().getOffset() - range.getStart().getOffset());
 		QuickfixType quickfixType = quickfixRegistry.getQuickfixType(RewriteRefactorings.REWRITE_RECIPE_QUICKFIX);
-		if (quickfixType != null && m.getRecipeId() != null) {
-			for (RecipeScope s : recipeFixDescriptor.getScopes()) {
-				problem.addQuickfix(new QuickfixData<>(
-						quickfixType,
-						new Data(m.getRecipeId(), doc.getUri(), s, m.getScope(), m.getParameters()),
-						recipeFixDescriptor.getLabel(s)
-				));
+		if (quickfixType != null) {
+			for (FixDescriptor f : m.getFixes()) {
+				if (recipeRepo.getRecipe(f.getRecipeId()) != null) {
+					problem.addQuickfix(new QuickfixData<>(
+							quickfixType,
+							f,
+							f.getLabel()
+					));
+				}
 			}
 		}
 		return problem;
@@ -134,32 +139,38 @@ public class RewriteReconciler implements JavaReconciler {
 		
 		if (config.isRewriteReconcileEnabled()) {
 			try {
-				List<RecipeSpringJavaProblemDescriptor> descriptors = getProblemRecipeDescriptors(project);
+				List<RecipeCodeActionDescriptor> descriptors = getProblemRecipeDescriptors(project);
 	
-				JavaParser javaParser = RewriteCompilationUnitCache.createJavaParser(project);
-				List<CompilationUnit> cus = ORAstUtils.parseInputs(javaParser, docs.stream().map(d -> new Parser.Input(Path.of(d.getUri()), () -> {
-					return new ByteArrayInputStream(d.get().getBytes());
-				})).collect(Collectors.toList()));
-				
-				if (!descriptors.isEmpty()) {
+				JavaParser javaParser = ORAstUtils.createJavaParser(project);
+				if (javaParser != null) {
+					List<CompilationUnit> cus = ORAstUtils.parseInputs(javaParser, docs.stream().map(d -> new Parser.Input(Paths.get(URI.create(d.getUri())), () -> {
+						return new ByteArrayInputStream(d.get().getBytes());
+					})).collect(Collectors.toList()));
 					
-					for(int i = 0; i < cus.size(); i++) {
-						final IDocument doc = docs.get(i);
-						List<ReconcileProblem> problems = new ArrayList<>();						
-						collectProblems(descriptors, doc, cus.get(i), problems::add);
-						if (!problems.isEmpty()) {
-							allProblems.put(doc, problems);
-						}	
+					if (!descriptors.isEmpty()) {
+						
+						for(int i = 0; i < cus.size(); i++) {
+							final IDocument doc = docs.get(i);
+							List<ReconcileProblem> problems = new ArrayList<>();						
+							collectProblems(descriptors, doc, cus.get(i), problems::add);
+							if (!problems.isEmpty()) {
+								allProblems.put(doc, problems);
+							}	
+						}
 					}
 				}
 			} catch (Exception e) {
-				log.error("", e);
+				if (ORAstUtils.isExceptionFromInterrupedThread(e)) {
+					log.debug("", e);
+				} else {
+					log.error("", e);
+				}
 			}
 		}
 		return allProblems;
 	}
 	
-	private List<RecipeSpringJavaProblemDescriptor> getProblemRecipeDescriptors(IJavaProject project)
+	private List<RecipeCodeActionDescriptor> getProblemRecipeDescriptors(IJavaProject project)
 			throws InterruptedException, ExecutionException {
 		return recipeRepo.getProblemRecipeDescriptors().stream().filter(d -> d.getProblemType() != null).filter(d -> {
 			switch (config.getProblemApplicability(d.getProblemType())) {
@@ -173,7 +184,7 @@ public class RewriteReconciler implements JavaReconciler {
 		}).collect(Collectors.toList());
 	}
 	
-	private void collectProblems(List<RecipeSpringJavaProblemDescriptor> descriptors, IDocument doc, CompilationUnit compilationUnit, Consumer<ReconcileProblem> problemHandler) {
+	private void collectProblems(List<RecipeCodeActionDescriptor> descriptors, IDocument doc, CompilationUnit compilationUnit, Consumer<ReconcileProblem> problemHandler) {
 		CompilationUnit cu = recipeRepo.mark(descriptors, compilationUnit);
 		
 		new JavaIsoVisitor<ExecutionContext>() {
